[package]
name = "persistent-keystore-rs"
version = "0.0.0"
edition = "2021"
license = "Apache-2.0"
description = "Lightweight Persistent Database library written in Rust"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.3"
lz4_flex = { version = "0.9.2", features = ["safe-encode","safe-decode","checked-decode"] }
serde = { version = "1.0.130", features = ["rc"]}
serde_derive = "1.0.130"
tokio = { version = "1.14.0", features = ["rt-multi-thread", "net", "time"] }
tracing = { version = "0.1.29", features = ["log-always"] }

[features]
